{
  "version": 4,
  "terraform_version": "0.13.1",
  "serial": 269,
  "lineage": "47790601-e6d5-2422-60aa-98752272e033",
  "resources": [
    {
      "module": "module.compute[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "SgInstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a887e401f7654935",
            "arn": "arn:aws:ec2:us-east-1:463583571492:instance/i-017f6e83d5b45282b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-017f6e83d5b45282b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mounika",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0eec3f2d535303fac",
            "private_dns": "ip-192-30-10-176.ec2.internal",
            "private_ip": "192.30.10.176",
            "public_ip": "34.231.241.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-05196683b7daa8180",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02e128206146b71e7",
            "tags": {
              "Name": "mounika 0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ecd5bc0faec72462"
            ]
          },
          "dependencies": [
            "module.network.aws_security_group.mysg",
            "module.network.aws_subnet.subnet",
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute[1]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "SgInstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a887e401f7654935",
            "arn": "arn:aws:ec2:us-east-1:463583571492:instance/i-0a5259f21fbd224fb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a5259f21fbd224fb",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mounika",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f082332ba190f1b8",
            "private_dns": "ip-192-30-10-7.ec2.internal",
            "private_ip": "192.30.10.7",
            "public_ip": "3.230.147.8",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0f6679212a765e737",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02e128206146b71e7",
            "tags": {
              "Name": "mounika 1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ecd5bc0faec72462"
            ]
          },
          "dependencies": [
            "module.network.aws_security_group.mysg",
            "module.network.aws_subnet.subnet",
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute[2]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "SgInstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a887e401f7654935",
            "arn": "arn:aws:ec2:us-east-1:463583571492:instance/i-016b27126bda00709",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-016b27126bda00709",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mounika",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ae8ca97f17cc2a71",
            "private_dns": "ip-192-30-10-134.ec2.internal",
            "private_ip": "192.30.10.134",
            "public_ip": "18.209.213.171",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-029c1bf78f61d1e6c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02e128206146b71e7",
            "tags": {
              "Name": "mounika 2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ecd5bc0faec72462"
            ]
          },
          "dependencies": [
            "module.network.aws_security_group.mysg",
            "module.network.aws_subnet.subnet",
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute[3]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "SgInstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a887e401f7654935",
            "arn": "arn:aws:ec2:us-east-1:463583571492:instance/i-0b70fe3ec940372a7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b70fe3ec940372a7",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mounika",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-041136e650f462398",
            "private_dns": "ip-192-30-10-40.ec2.internal",
            "private_ip": "192.30.10.40",
            "public_ip": "3.236.178.193",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c8e242cddb1a4689",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02e128206146b71e7",
            "tags": {
              "Name": "mounika 3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ecd5bc0faec72462"
            ]
          },
          "dependencies": [
            "module.network.aws_security_group.mysg",
            "module.network.aws_subnet.subnet",
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:463583571492:internet-gateway/igw-088ec7bbd0b90376d",
            "id": "igw-088ec7bbd0b90376d",
            "owner_id": "463583571492",
            "tags": {
              "Name": "mounika-igw"
            },
            "vpc_id": "vpc-0a7f50e0994d5a8b5"
          },
          "dependencies": [
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07ef50e89367d1c60",
            "owner_id": "463583571492",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-088ec7bbd0b90376d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mounika_route"
            },
            "vpc_id": "vpc-0a7f50e0994d5a8b5"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "myrouteassociate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0950c41be1602a38b",
            "route_table_id": "rtb-07ef50e89367d1c60",
            "subnet_id": "subnet-02e128206146b71e7"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.route",
            "module.network.aws_subnet.subnet",
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:463583571492:security-group/sg-0ecd5bc0faec72462",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ecd5bc0faec72462",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20200910044510974400000001",
            "name_prefix": "",
            "owner_id": "463583571492",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mounikasg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7f50e0994d5a8b5"
          },
          "dependencies": [
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:463583571492:subnet/subnet-02e128206146b71e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.30.10.0/24",
            "id": "subnet-02e128206146b71e7",
            "map_public_ip_on_launch": true,
            "owner_id": "463583571492",
            "tags": {
              "Name": "mounika-route"
            },
            "vpc_id": "vpc-0a7f50e0994d5a8b5"
          },
          "dependencies": [
            "module.network.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:463583571492:vpc/vpc-0a7f50e0994d5a8b5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.30.0.0/16",
            "default_network_acl_id": "acl-0b3cf414cf7a6d49c",
            "default_route_table_id": "rtb-0469d2dc9a6bdfeb4",
            "default_security_group_id": "sg-0022bbe33706fbabe",
            "dhcp_options_id": "dopt-449e073e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a7f50e0994d5a8b5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0469d2dc9a6bdfeb4",
            "owner_id": "463583571492",
            "tags": {
              "Name": "mounia-vpc"
            }
          }
        }
      ]
    }
  ]
}